Increase card's z-index instead of decreasing main's This ensures that links on main work properly

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -8,6 +8,8 @@
   background-repeat: no-repeat;
   border-radius: 15px;
   position: relative;
+  z-index: 10;
+  position: relative;
 }
 .card h2 {
   font-size: 32px;
@@ -31,8 +33,6 @@
   padding-top: 253px;
   margin-top: -189px;
   padding-inline: 24px;
-  z-index: -10;
-  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -53,7 +53,8 @@
   margin-bottom: 40px;
 }
 .nav ul {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   gap: 32px;
   text-align: center;
   letter-spacing: 2px;
